src/test/ui/parser/macro/trait-object-macro-matcher.stderr
error: lifetime in trait object type must be followed by `+`
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^ help: use `dyn`: `dyn 'static`
   |
   = note: `#[warn(bare_trait_objects)]` on by default

error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0224`.
